--- a/package.json
+++ b/package.json
@@ -5,14 +5,20 @@
   "main": "src/index.js",
   "scripts": {
     "start": "webpack serve --open --config webpack.dev.js",
-    "build": "webpack build --config webpack.prod.js"
+    "build": "webpack build --config webpack.prod.js",
+    "deploy": "gh-pages -d dist",
+    "lint": "eslint"
   },
   "keywords": [],
   "author": "sub-pr1me",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.16.0",
     "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^7.0.0",
+    "eslint": "^9.16.0",
+    "gh-pages": "^6.2.0",
+    "globals": "^15.13.0",
     "html-webpack-plugin": "^5.6.0",
     "style-loader": "^4.0.0",
     "webpack": "^5.95.0",
